2005-02-05 Seiichi SATO <ssato@sh.rim.or.jp>

	* doc/en/PLATFORM: updated.

	* configure.in: if scim is enabled, try to detect c++ compiler. if not,
	do nothing.

	* mkf_char.c, mkf_char.h
	(mkf_char_to_int) (mkf_int_to_bytes) (mkf_bytes_to_int)
	* mkf_parser.c mkf_parser.h
	(__mkf_parser_increment) (__mkf_parser_n_increment) (__mkf_parser_mark)
	(__mkf_parser_reset)
	* ml_char.c, ml_char.h
	(ml_char_init) (ml_char_final) (ml_char_set) (ml_char_combine)
	(ml_combine_chars) (ml_remove_combining_char) (ml_get_base_char)
	(ml_get_combining_chars) (ml_char_move) (ml_char_copy) (ml_char_bytes)
	(ml_char_size) (ml_char_set_bytes) (ml_char_cs) (ml_char_is_comb)
	(ml_char_font) (ml_char_cols) (ml_char_is_biwidth) (ml_char_fg_color)
	(ml_char_set_fg_color) (ml_char_bg_color) (ml_char_set_bg_color)
	(ml_char_is_underlined) (ml_char_reverse_color)
	(ml_char_restore_color) (ml_char_copy_color_reversed_flag)
	(ml_char_is_null) (ml_char_equal) (ml_char_bytes_is)
	(ml_char_bytes_equal) (ml_sp_ch) (ml_nl_ch)
	* ml_str.c, ml_str.h
	(ml_str_copy) (ml_str_cols) (ml_str_equal) (ml_str_bytes_equal):
	removed 'inline' from all global functions. (#1081111)

2005-02-04 MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_window.c: * use Mapnotify as a trigger of transparency
	processing.

2005-02-04 MINAMI Hirokazu <minami@mistfall.net>
	
	* xwindow/x_screen.c: During mouse tracking,
	try to report sane location even if there was no character
	under clicked column.
	(This is not perfect when varible-width font is used, though)

2005-02-04 MINAMI Hirokazu <minami@mistfall.net>

	* man/mlterm.1: added description for PREV/NEXT_PTY. 
	(SF#1110868. Thanks to John Foerch)

2005-02-03 Seiichi SATO <ssato@sh.rim.or.jp>

	* mlterm/ml_edit.c (ml_edit_go_back),
	  mlterm/ml_vt100_parser.c (parse_vt100_escape_sequence):
	  fixed #1048321 (autowrap test of vttest-2.7).

2005-02-03 MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_screen.c:
	- changed to ignore un-reportable mouse click.