@@ -1,3 +1,7 @@
+2005-02-09 MINAMI Hirokazu <minami@mistfall.net>
+
+	* xwindow/x_main_config.c: now accepts --iconpath option.
+
 2005-02-05 Seiichi SATO <ssato@sh.rim.or.jp>
 
 	* doc/en/PLATFORM: updated.
